src/objects/fflbx__fflib_BatchProcess__c.object
<CustomObject>
    <fields>
        <fullName>fflbx__ApexJobClassName__c</fullName>
        <label>Apex Job Class Name</label>
        <length>80</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>fflbx__ApexJobID__c</fullName>
        <label>Apex Job ID</label>
        <length>18</length>
        <type>Text</type>
        <unique>true</unique>
    </fields>
    <fields>
        <fullName>fflbx__BatchControlRecordID__c</fullName>
        <label>Batch Control Record ID</label>
        <length>18</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>fflbx__ConcurrencyModeUniqueID__c</fullName>
        <label>Concurrency Mode Unique ID</label>
        <length>80</length>
        <type>Text</type>
        <unique>true</unique>
    </fields>
    <fields>
        <fullName>fflbx__CurrentChainIndex__c</fullName>
        <defaultValue>0</defaultValue>
        <label>Current Chain Index</label>
        <precision>3</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>fflbx__CurrentChainNumber__c</fullName>
        <defaultValue>0</defaultValue>
        <label>Current Chain Number</label>
        <precision>3</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>fflbx__FailedRecordID__c</fullName>
        <label>Failed Record ID</label>
        <length>18</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>fflbx__NumberofBatchesinChain__c</fullName>
        <defaultValue>0</defaultValue>
        <label>Number of Batches in Chain</label>
        <precision>3</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>fflbx__ProcessName__c</fullName>
        <label>Process Name</label>
        <length>80</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>fflbx__ProgressInformation__c</fullName>
        <label>Progress Information</label>
        <length>80</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>fflbx__StatusDetail__c</fullName>
        <label>Status Detail</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>fflbx__Status__c</fullName>
        <label>Status</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Processing</fullName>
                </value>
                <value>
                    <fullName>Completed</fullName>
                </value>
                <value>
                    <fullName>Failed</fullName>
                </value>
                <value>
                    <fullName>Unknow</fullName>
                </value>
                <value>
                    <fullName>Aborted</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>fflbx__SuccessfulRecordID__c</fullName>
        <label>Successful Record ID</label>
        <length>18</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>fflbx__TotalChainNumber__c</fullName>
        <defaultValue>0</defaultValue>
        <label>Total Chain Number</label>
        <precision>3</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>fflbx__UseDefaultConstructor__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Use Default Constructor</label>
        <type>Checkbox</type>
    </fields>
    <label>Batch Process</label>
    <listViews>
        <fullName>fflbx__All</fullName>
        <columns>NAME</columns>
        <columns>fflbx__Status__c</columns>
        <columns>fflbx__ApexJobClassName__c</columns>
        <filterScope>Everything</filterScope>
        <label>All</label>
        <language>en_US</language>
    </listViews>
    <listViews>
        <fullName>fflbx__All1</fullName>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <nameField>
        <displayFormat>BP-{000000}</displayFormat>
        <label>Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Batch Processes</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>